# CTX.ai

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  PHASE-B-REPORT.md  README.md  ctx_mod.ctx  demo_features.py  pyproject.toml  report_combined.py  reviewer_article.md  rough_notes.md  run_graph_eval.py  run_model_spread_eval.py  run_scaling_eval.py
.ctx-cache/tasks/: CP-001.spec.md  CP-002.5.spec.md  CP-002.spec.md  CP-003.spec.md  CP-004.spec.md  CP-005.spec.md  CP-006.spec.md  CP-007.spec.md  CP-008.spec.md  CP-009.spec.md  CP-010.3.spec.md  CP-010.spec.md  CP-014.spec.md  CP-016-017-018.spec.md  CP-019-020.spec.md  CP-pack-mcp.spec.md  loop-log.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ctxpack/: __init__.py
ctxpack/agent/: __init__.py  session.py  state_parser.py
ctxpack/benchmarks/: __init__.py  ablation_runner.py  bench.py  definitive_eval.py  dotenv.py  eval_config.py  fixes_needed.md  gemini_eval.py  hydration_eval.py  model_affinity_eval.py  rate_distortion.py  reasoning_model_eval.py  runner.py  save_extension_results.py  scaling_eval.py  tokenizer_mapping.py
ctxpack/cli/: main.py
ctxpack/core/: confidence.py  (+14 more)
docs/: mcp-error-contract.md
paper/: analytics-team-guide.md  code-packer-v0-backlog.md  code-packer-v0-rfc.md  ctxpack-whitepaper-v2.md  ctxpack-whitepaper-v3.md  ctxpack-whitepaper.L2.ctx  ctxpack-whitepaper.md  generate_figures.py  linkedin-post-v3.md  md_to_docx.py  pharma-team-guide.md  scriptiva-team-harness-guide.md  status-and-value-v0.5.md  validate_paper.py
spec/: CTXPACK-SPEC.L2.ctx  CTXPACK-SPEC.md  ctx.peg
tests/: test_agent_compression.py  test_analytics.py  test_bench.py  test_budget.py  test_catalog_queries.py  test_cli.py  test_codebase.py  test_confidence_tracker.py  test_context_layers.py  test_ctxpack_eval.py  test_dream.py  test_elicit.py  test_entity_graph.py  test_entity_resolver.py  test_eval.py  test_eval_pipeline.py  test_grounding.py  test_guard.py  test_harness.py  test_hydration_eval.py  test_hydration_protocol.py  test_hydrator.py  test_incremental_packer.py  test_keywords.py  test_l1_serializer.py  test_md_parser.py  test_metric_sanity.py  test_packer.py  test_parser.py  test_parser_hardening.py  test_phase2_layer_consumers.py  test_phase_b_conflict.py  test_phase_b_diff.py  test_phase_b_l3_manifest.py  test_phase_b_perf.py  test_phase_b_relationships.py  test_phase_b_review_fixes.py  test_prose_v2.py  test_rag_baseline.py  test_rate_distortion.py  (+9 more)
(+864 files in other folders)
