[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ctxpack"
version = "0.1.0"
description = "Deterministic parser for the .ctx context compression format"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []
authors = [
    {name = "Kapil Pant", email = "kapil@synaptyx.com"},
]

[project.scripts]
ctxpack = "ctxpack.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
